# rusty-axum

./: .gitignore  Cargo.toml  README.md  diesel.toml  noteboo.text
migrations/2024-11-20-065547_create_users_table/: up.sql
reseacrh/: hashing.rs  jwt.rs  main.rs
src/: main.rs  schema.rs
src/app/: errors.rs  middlewares.rs  mod.rs  routes.rs  state.rs
src/config/: database.rs  mod.rs  settings.rs
src/handler/: entry_handlers.rs  mod.rs  user_handlers.rs
src/models/: mod.rs  post.rs  user.rs
src/routes/: entry_routes.rs  mod.rs  user_routes.rs
src/utils/: hashing.rs  mod.rs  validation.rs
