[package]
name = "rusty-axum"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dipdaiict/rusty-axum"
license = ""
categories = []

[dependencies]
argon2 = "0.5.3"
axum = "0.7.9"
axum-server = "0.7.1"
chrono = "0.4.38"
diesel = "2.2.4"
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
hyper = "1.5.0"
jsonwebtoken = "9.3.0"
log = "0.4.22"
rand = "0.8.5"
serde_json = "1.0.133"
sqlx = { version ="0.8.2",  features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-postgres = "0.7.12"
tower = "0.5.1"
tower-sessions = "0.13.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }