[package]
name = "rusty-axum"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dipdaiict/rusty-axum"
license = ""
categories = []
keywords = ["web", "api", "rust", "axum"]
readme = "README.md"
description = "A simple RESTful API using Axum."


[dependencies]
axum = "0.7.9"
axum-server = "0.7.1"
dotenv = "0.15.0"
dotenvy = "0.15.7"
hyper = "1.5.0"
log = "0.4.22"
rand = "0.8.5"
serde_json = "1.0.133"
sqlx = { version ="0.8.2",  features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }
diesel = { version = "2.0", features = ["postgres", "r2d2"] }  
serde = "1.0.215"
chrono = { version ="0.4.38", features = ["serde"] }
bloom = "0.3.2"
bincode = "1.3.3"
uuid = {version = "1.11.0", features = ["v4"] }
get_if_addrs = "0.5.3"
